<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1495EF">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="#1495EF"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5">

                <com.howshea.basemodule.component.view.RoundCornerImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="38dp"
                    android:src="@drawable/logo_big" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:letterSpacing="0.04"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="16dp"
                    android:letterSpacing="0.04"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:targetApi="lollipop"
                    tools:text="v 0.9" />
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_white"
                app:title=""
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_tag"
                android:paddingStart="@dimen/global_margin"
                android:paddingTop="11dp"
                android:paddingEnd="@dimen/global_margin"
                android:paddingBottom="11dp"
                android:text="@string/brief"
                android:textColor="@color/textPrimary"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/global_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/global_margin"
                android:layout_marginBottom="10dp"
                android:letterSpacing="0.04"
                android:textIsSelectable="true"
                android:lineSpacingExtra="5dp"
                android:text="@string/briefMsg"
                android:textColor="@color/textSecondaryBlue"
                android:textSize="14sp"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_tag"
                android:paddingStart="@dimen/global_margin"
                android:paddingTop="11dp"
                android:paddingEnd="@dimen/global_margin"
                android:paddingBottom="11dp"
                android:text="@string/sources"
                android:textColor="@color/textPrimary"
                android:textSize="15sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ryc_sources"
                android:background="@color/divider"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:targetApi="lollipop" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>